--- a/src/app/pages/costos-anuales copy/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales copy/costos-anuales.component.html
@@ -375,7 +375,7 @@
                 <!-- <dxi-col [ratio]="1"></dxi-col> -->
                 <!--Año-->
                 <dxi-col [ratio]=".60"></dxi-col>
-                <dxi-col [ratio]="1.30"></dxi-col>
+                <dxi-col [ratio]=".60"></dxi-col>
                 <!--vacia-->
                 <dxi-col [ratio]=".15"></dxi-col>
                 <!--Compañia-->
@@ -426,7 +426,7 @@
                 <dxi-item>
                     <dxi-location screen="md lg" [row]="0" [col]="0"></dxi-location>
                     <dxi-location style="margin-top: 1rem" screen="xs sm" [row]="10" [col]="0" [colspan]="12"></dxi-location>
-                    <div>Año-Mes:</div>
+                    <div>Periodo:</div>
                 </dxi-item>
         
                 <dxi-item>
@@ -505,17 +505,19 @@
                         
                         
                         <!-- <dxi-column dataField="clasificacion" caption="Clasificación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column> -->
-                        <dxi-column dataField="concepto" caption="Concepto" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="real" caption="REAL" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="realP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="presupuesto" caption="PRESUP" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="presupuestoP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="realA" caption="REAL ACUM" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="realAP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="presA" caption="PRESUP ACUM" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="presAP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="periodo" caption="Periodo"  headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="renglon" caption="Renglon" headerCellTemplate="headerTemplate"></dxi-column>
+                        <dxi-column caption="{{myCompania +' - '+ myUdN}}" headerCellTemplate="headerTemplate">
+                            <dxi-column dataField="concepto" caption="Concepto" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="real" caption="REAL" [format]="separator" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="realP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="presupuesto" caption="PRESUP" [format]="separator" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="presupuestoP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="realA" caption="REAL ACUM" [format]="separator" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="realAP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="presA" caption="PRESUP ACUM" [format]="separator" headerCellTemplate="headerTemplate"></dxi-column>
+                            <dxi-column dataField="presAP" caption="%" headerCellTemplate="headerTemplate"></dxi-column>
+                        </dxi-column>
+                        <!-- <dxi-column dataField="periodo" caption="Periodo"  headerCellTemplate="headerTemplate"></dxi-column>
+                        <dxi-column dataField="renglon" caption="Renglon" headerCellTemplate="headerTemplate"></dxi-column> -->
     
                         <div *dxTemplate="let data of 'headerTemplate'">
                             <div style="font-weight: bolder; color: black">
@@ -539,7 +541,7 @@
                     </dx-data-grid>
                 </dxi-item>
 
-                <dxi-item title="COSTOS ANUALES">
+                <dxi-item title="RESUMEN DE CUENTAS">
                     <dx-data-grid #rentCont2 id="gridContainer2" [dataSource]="CACostos" [showColumnLines]="true" [rowAlternationEnabled]="true" [columnAutoWidth]="true" [allowColumnResizing]="true" [allowColumnReordering]="false" [columnAutoWidth]="true" [showBorders]="true"
                     (onRowPrepared)="onRowPrepared($event)" (onContentReady)="onContentReady($event)" (onCellPrepared)="onCellPrepared($event)">
             
@@ -549,9 +551,9 @@
                     <dxi-column dataField="centroCostoCta" caption="Centro Costos Cta" [fixed]="false" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold"></dxi-column>
                     <dxi-column dataField="clasificacion" caption="Clasificación" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
                     <dxi-column dataField="clasificacion2" caption="Clasificación 2" [fixed]="false" headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="descCuenta" caption="Desc. Cuenta" [fixed]="false"  headerCellTemplate="headerTemplate"></dxi-column>
-                    <dxi-column dataField="numCuentaFormat" caption="Num. Cuenta" [fixed]="false"  headerCellTemplate="headerTemplate"></dxi-column>
                     <dxi-column dataField="periodo" caption="Periodo" [fixed]="false"  headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="numCuentaFormat" caption="Num. Cuenta" [fixed]="false"  headerCellTemplate="headerTemplate"></dxi-column>
+                    <dxi-column dataField="descCuenta" caption="Descripción" [fixed]="false"  headerCellTemplate="headerTemplate"></dxi-column>
                     <dxi-column dataField="total" caption="Total" [fixed]="false" format="$ #,##0.##;-$ #,##0.##" headerCellTemplate="headerTemplate"></dxi-column>
                     
                     <!-- <dxi-column dataField="" caption="Ver" [fixed]="false" headerCellTemplate="headerTemplate" cellTemplate="detalleCellTemplate"></dxi-column>
