--- a/src/app/pages/costos-anuales copy/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales copy/costos-anuales.component.html
@@ -588,8 +588,12 @@
                         <dxi-column dataField="centroCosto1" caption="Centro costo 1" headerCellTemplate="headerTemplate"></dxi-column>
                         <dxi-column dataField="centroCosto2" caption="Centro costo 2" headerCellTemplate="headerTemplate"></dxi-column>
                         <dxi-column dataField="centroCosto3" caption="Centro costo 3" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="centroCostoCia" caption="Centro costo cia" headerCellTemplate="headerTemplate"></dxi-column>
-                        <dxi-column dataField="centroCostoCta" caption="Centro costo cta" headerCellTemplate="headerTemplate"></dxi-column>
+                        
+                        <dxi-column caption="Centro de costos" headerCellTemplate="headerTemplate">
+                        <dxi-column dataField="centroCostoCia" caption="Compañia" headerCellTemplate="headerTemplate"></dxi-column>
+                        <dxi-column dataField="centroCostoCta" caption="Centro costo" headerCellTemplate="headerTemplate"></dxi-column>
+                        </dxi-column>
+
                         <dxi-column dataField="conceptoIndividual" caption="concepto individual" headerCellTemplate="headerTemplate"></dxi-column>
                         <dxi-column dataField="descCuenta" caption="desc. Cuenta" headerCellTemplate="headerTemplate"></dxi-column>
                         <dxi-column dataField="descEstatus" caption="desc Estatus" headerCellTemplate="headerTemplate"></dxi-column>
