--- a/src/app/pages/costos-anuales copy/costos-anuales.component.html
+++ b/src/app/pages/costos-anuales copy/costos-anuales.component.html
@@ -573,7 +573,7 @@
                     <div *dxTemplate="let cell of 'cellTemplateBold'">
                         <div style="font-weight: bold;">{{cell.text}}</div>
                     </div>
-                    <dxo-paging [pageSize]="paginacion"></dxo-paging>
+                    <dxo-paging [pageSize]="20"></dxo-paging>
                     <dxo-group-panel [visible]="false"></dxo-group-panel>
                     <dxo-grouping #expand [autoExpandAll]="expandGroup" ></dxo-grouping>
                     <dxo-pager [visible]="true" [allowedPageSizes]="allowedPageSizes" displayMode="full" [showPageSizeSelector]="true" [showInfo]="true" [showNavigationButtons]="true">
